# DailyDevLog

./: .env.example  .gitattributes  .gitignore  DailyDevLog.bat  README.md  conftest.py  manage.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: settings.py  urls.py
core/: __init__.py  datetime_utils.py  markdown_export.py  stats.py
desktop_client/: __init__.py  config.py
desktop_ui/: admin.py  layout_colorwidget.py  main.py  models.py  serializers.py  theme_dark.qss
desktop_ui/export/: markdown_exporter.py
desktop_ui/forms/: task_form.py
desktop_ui/migrations/: 0001_initial.py  0002_alter_dailylog_commit_principal.py  0003_dailylog_project_name_dailylog_project_type.py  0004_alter_dailylog_project_type.py
desktop_ui/static/desktop_ui/assets/: index-WopTV1MD.js
desktop_ui/templates/desktop_ui/: index.html
desktop_ui/views/: export_view.py  history_view.py  stats_scroll.py  stats_view.py
desktop_ui/views/api/: auth_views.py  dailylog_views.py
exportaciones_markdown/: 2025-08-21_Creacion_de_DaylyDevLog.md  2025-08-21_Executable_Packaging_and_Desktop_Launch_Integration_for_DailyDevLog.md  2025-08-21_Reconstrucción_total_con_README_y_autenticación.md  2025-08-21_Refactorizacion_DailyDevLog.md  2025-08-21_Refactorización_de_main.py_y_history_view.py.md  2025-08-22_Modernización_de_la_Interfaz_y_Optimización_de_Estilos_CSS_en_PySide6.md  2025-08-22_Refactorización_de_vistas_Exportación_Markdown_Recarga_visual.md  2025-08-22_Refactorización_integral_de_vistas_con_recarga_centralizada_y_soporte_de_scroll_en_estadísticas.md  2025-08-23_Integración_total_de_backend_DRF_y_GUI_modular_para_carga_masiva_y_visualización_profesional.md  2025-08-24_Refactor_estructural_y_validación_visual_con_Celery-DjangoRestFramework.md
exportaciones_markdown/Refactor integral de historial con simplificación visual.md/: 2025-08-28_Refactor_integral_de_historial_con_simplificación_visual.md
requirements/: base.txt  desktop.txt  dev.txt  docs.txt
tests/: test_api.py  test_datetime_utils.py  test_markdown_export.py  test_stats.py
